# exemplo-fasapi

./: .gitignore  README.md  database.py  main.py  main.tf  pyproject.toml  schema.py  user_data.sh.tpl  variable.tf
