[tool.poetry]
name = "exemplo-fasapi"
version = "0.1.0"
description = ""
authors = ["Alexandre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
